--- a/starwarsintro.css
+++ b/starwarsintro.css
@@ -13,8 +13,9 @@ body, html{
   margin: 0px;
 }
 
+
 .star-wars-intro {
-  background: url("img/stars-bg.jpg") center center;
+  background: url('https://lumiere-a.akamaihd.net/v1/images/star-wars-backgrounds-25_bc15ec98.jpeg') center center;
   width: 100%;
   height: 100%;
   font-family: "Droid Sans", arial, verdana, sans-serif;
@@ -67,9 +68,10 @@ body, html{
   pointer-events: none;
 }
 
-.star-wars-intro .space-button {
+.star-wars-intro .Next-Page {
   color: #EBD71C;
   border: 12px solid #EBD71C;
+  border-radius: 20px;
   padding: 20px;
   background: transparent;
   text-decoration: none;
@@ -78,17 +80,49 @@ body, html{
   text-align: center;
 }
 
+.star-wars-intro .Next-Page:hover {
+  background-color: #D2BE03;
+  border-color: #D2BE03;
+  color: black;
+}
+
+.star-wars-intro .Next-Page:active,
+.star-wars-intro .Next-Page:focus {
+  background-color: #B8A40A;
+  border-color: #B8A40A;
+  color: black;
+}
+
+.star-wars-intro .space-button {
+  color: #EBD71C;
+  border: 12px solid #EBD71C;
+  border-radius: 20px;
+  padding: 20px;
+  background: transparent;
+  text-decoration: none;
+  margin-left: 800px;
+  margin-right: 800px;
+  display: block;
+  text-align: center;
+}
+ 
+
 .star-wars-intro .space-button:hover {
   background-color: #D2BE03;
   border-color: #D2BE03;
   color: black;
 }
 
-.star-wars-intro .space-button:active,
-.star-wars-intro .space-button:focus {
+.star-wars-intro.space-button:active,
+.star-wars-intro.space-button:focus {
   background-color: #B8A40A;
   border-color: #B8A40A;
   color: black;
+}
+
+.style-audio {
+  background: url('https://lumiere-a.akamaihd.net/v1/images/star-wars-backgrounds-25_bc15ec98.jpeg') center right;
+  position: absolute;
 }
 
 .star-wars-intro .title-content {
@@ -203,5 +237,14 @@ body, html{
     top: 100%;
     animation: scroll 100s linear 4s forwards;
   }
+}
+
+.star-wars-intro .main-logo > img {
+  max-width: 150%;
+  border-radius: 50%;
+}
+
+.personal-data{
+  text-align: center;
 }
 
