--- a/bard.css
+++ b/bard.css
@@ -1,4 +1,10 @@
 
+    @page {
+        size: 21cm 29.7cm;
+        margin: 30mm 45mm 30mm 45mm;
+         /* change the margins as you want them to be. */
+    }
+
         
 body {
     font-family: Arial, sans-serif;
@@ -51,7 +57,34 @@ body {
     padding: 0.04px;
     text-align: center;
   }
-  
+
+  .back-space > .space-button {
+            
+    background-color: rgb(250, 140, 140);
+    border-radius: 50px;
+    border: 4px solid #d4d4cf;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 550;
+    height: 40px;
+    line-height: 20px;
+   
+    margin: 35px 145px;
+    outline: none;
+    padding: 5px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 5ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
   button {
       box-shadow:inset -2px 0px 50px -32px #a6a6e0;
       background:linear-gradient(to bottom, #2e466e 5%, #415989 100%);
